--- a/index.html
+++ b/index.html
@@ -2,12 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TablePractice</title>
+  <link rel="stylesheet" href="./assets/CSS/reset.css">
   <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
 <body>
-  
+  <table>
+    <thead>
+      <tr>
+        <th>Choose your plan</th>
+        <th>
+          <p>starter</p>
+          <p>$10</p>
+          <p>per month</p>
+        </th>
+        <th>
+          <p>econom</p>
+          <p>$30</p>
+          <p>per month</p>
+        </th>
+        <th>
+          <p>standart</p>
+          <p>$59</p>
+          <p>per month</p>
+        </th>
+        <th>
+          <p>professional</p>
+          <p>$99</p>
+          <p>per month</p>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th>Amount of space</th>
+        <td>20Gb</td>
+        <td>40GB</td>
+        <td>110GB</td>
+        <td>Unlimited</td>
+      </tr>
+      <tr>
+        <th>Bandwidth per mounth</th>
+        <td>120GB</td>
+        <td>240GB</td>
+        <td>610GB</td>
+        <td>1300GB</td>
+      </tr>
+      <tr>
+        <th>Email accounts</th>
+        <td>1</td>
+        <td>15</td>
+        <td>60</td>
+        <td>Unlimited</td>
+      </tr>
+      <tr>
+        <th>MySQL databases</th>
+        <td>1</td>
+        <td>15</td>
+        <td>60</td>
+        <td>Unlimited</td>
+      </tr>
+      <tr>
+        <th>25h support</th>
+        <td>No</td>
+        <td>Yes</td>
+        <td>Yes</td>
+        <td>Yes</td>
+      </tr>
+      <tr>
+        <th>Support tickets per month</th>
+        <td>2</td>
+        <td>6</td>
+        <td>14</td>
+        <td>20</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th></th>
+        <td><button>START</button></td>
+        <td><button>START</button></td>
+        <td><button>START</button></td>
+        <td><button>START</button></td>
+      </tr>
+    </tfoot>
+  </table>
 </body>
 </html>
