--- a/index.html
+++ b/index.html
@@ -35,42 +35,42 @@
     </thead>
     <tbody>
       <tr>
-        <th>Amount of space</th>
+        <td>Amount of space</td>
         <td>20Gb</td>
         <td>40GB</td>
         <td>110GB</td>
         <td>Unlimited</td>
       </tr>
       <tr>
-        <th>Bandwidth per mounth</th>
+        <td>Bandwidth per mounth</td>
         <td>120GB</td>
         <td>240GB</td>
         <td>610GB</td>
         <td>1300GB</td>
       </tr>
       <tr>
-        <th>Email accounts</th>
+        <td>Email accounts</td>
         <td>1</td>
         <td>15</td>
         <td>60</td>
         <td>Unlimited</td>
       </tr>
       <tr>
-        <th>MySQL databases</th>
+        <td>MySQL databases</td>
         <td>1</td>
         <td>15</td>
         <td>60</td>
         <td>Unlimited</td>
       </tr>
       <tr>
-        <th>25h support</th>
+        <td>25h support</td>
         <td>No</td>
         <td>Yes</td>
         <td>Yes</td>
         <td>Yes</td>
       </tr>
       <tr>
-        <th>Support tickets per month</th>
+        <td>Support tickets per month</td>
         <td>2</td>
         <td>6</td>
         <td>14</td>
@@ -80,10 +80,10 @@
     <tfoot>
       <tr>
         <th></th>
-        <td><button>START</button></td>
-        <td><button>START</button></td>
-        <td><button>START</button></td>
-        <td><button>START</button></td>
+        <th><button>START</button></th>
+        <th><button>START</button></th>
+        <th><button>START</button></th>
+        <th><button>START</button></th>
       </tr>
     </tfoot>
   </table>
